Changed title everywhere to Senior Web Designer

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>About Me | Roland Szabó Frontend Designer</title>
+		<title>About Me | Roland Szabó | Senior Web Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -120,7 +120,7 @@
 </section>
 
 <section>
-	<h2>What does a Frontend Designer do, anyway?</h2>
+	<h2>So, what do I do exactly?</h2>
 	<p>Glad you asked! When my parents ask, I make websites. To everyone else, I'm a web professional with a very specific skillset in the labyrinthian realm of modern frontend development. Here's the nitty-gritty:</p>
 
 	<h3>Fields of Expertise</h3>
