--- a/public/uses/index.html
+++ b/public/uses/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Uses | Roland Szabó Frontend Designer</title>
+		<title>Uses | Roland Szabó | Senior Web Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
