--- a/src/about.html
+++ b/src/about.html
@@ -51,7 +51,7 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 </section>
 
 <section>
-	<h2>What does a Frontend Designer do, anyway?</h2>
+	<h2>So, what do I do exactly?</h2>
 	<p>Glad you asked! When my parents ask, I make websites. To everyone else, I'm a web professional with a very specific skillset in the labyrinthian realm of modern frontend development. Here's the nitty-gritty:</p>
 
 	<h3>Fields of Expertise</h3>
