Slight adjustments to texts

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@ tagline: Senior Web Designer
 
 <p class="homepage-intro">I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work. <a href="/assets/roland-szabo-cv.pdf">Here's my CV.</a></p>
 
-<p>Welcome to my website, it's great to have you here! Here's what you'll find here.</p>
+<p>Please note that I created this website years ago with the purpose of finding freelance work. If you've come here from my CV or LinkedIn, some info may not be applicable to you.</p>
 <p>You can get to know me and learn what I do exactly on my <a href="/about/">About</a> page, or check out some of my favorite <a href="/projects/">Projects</a> that I've worked on.</p>
 <p>If you're interested in working with me freelance, I've compiled all the relevant information into my <a href="/hire/">Hire Me</a> page. You should also learn about my <a href="/process/">Design Process</a> while you're there.</p>
 <p>I hope you'll like it here. Don't forget to say hi! 😃</p>
