--- a/src/about.html
+++ b/src/about.html
@@ -12,7 +12,7 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 	<p>Hey, I'm Roland. I'm <span title="👴">34 years old</span>, currently living in Budapest, Hungary.</p>
 	<p>I created my first webpage in 2006 using a CMS called e107. There was one pre-made template I liked so much I would keep customizing it to death for different websites.</p>
 	<p>Today, I've worked with some amazing companies in senior and lead positions, crafting websites and user interfaces from scratch, tailoring them for the needs of the modern world.</p>
-	<p>The reason I love the web so much is that it continuously keeps me learning, as new technologies and methods keep popping up. There's never been a period in my career when I thought my job was boring. Nowadays I'm crazy about writing clean code, <strong>web performance</strong> and <strong>accessibility</strong>.</p>
+	<p>The reason I love the web so much is that it continuously keeps me learning, as new technologies and methods keep popping up. There's never been a period in my career when I thought my job was boring. Nowadays I'm crazy about writing <strong>clean code</strong> and <strong>accessibility</strong>.</p>
 	<p>In my free time, I do <a href="https://rolandszabo.photo/en/" target="_blank" rel="noopener noreferrer">relaxed portrait photography in Budapest</a>, play computer- and board games, translate useful stuff to my native language, and read books on how not to be a jerk.</p>
 </section>
 
@@ -52,20 +52,19 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 
 <section>
 	<h2>So, what do I do exactly?</h2>
-	<p>Glad you asked! When my parents ask, I make websites. To everyone else, I'm a web professional with a very specific skillset in the labyrinthian realm of modern frontend development. Here's the nitty-gritty:</p>
+	<p>Glad you asked! When my parents ask, I make websites. To everyone else, I'm a senior Web- and UI/UX designer with over 10 years of working experience. Here's the nitty-gritty:</p>
 
 	<h3>Fields of Expertise</h3>
 	<ul>
 		<li><strong>I am highly skilled at <abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading StyleSheets">CSS</abbr>.</strong> I hand-write minimal, semantic, reusable and overall beautiful code. My main focus is performance and accessibility.</li>
 		<li><strong>I design websites and user interfaces.</strong> I am highly proficient in the principles of web design, typography and color theory. My designs are more functional than artistic.</li>
-		<li><strong>I love fiddling with typography.</strong> I am an advocate of the fact that the web is 95% typography. I think web design is about the same.</li>
 	</ul>
 
 	<h3>Other than that&hellip;</h3>
 	<ul>
+		<li>I write basic presentational <strong>JavaScript and jQuery</strong> to control the interactive behaviour of user interface elements. I can confidently put together a simple frontend application in <strong>Vue 3</strong>.</li>
 		<li>I have a solid grasp on <strong>user experience</strong> principles and best practices, but I don't conduct user surveys or do research.</li>
 		<li>I am familiar with key aspects of <strong>graphic design</strong> and how to incorporate it into web design, but I don't create hand-made illustrations or custom graphics.</li>
-		<li>I write basic presentational <strong>JavaScript and jQuery</strong> to control the interactive behaviour of user interface elements, but I don't write application-level code.</li>
 		<li>I understand the principles of backend development and I can confidently work with <strong>templating systems</strong>, but I don't write backend logic (PHP, Python, C++, etc.) or fiddle with server-related stuff.</li>
 		<li>I know the on-site principles and best practices of <strong>search engine optimization</strong>, but I don't do offsite <abbr title="search engine optimization">SEO</abbr>, such as link building or guest posting.</li>
 		<li>I can create <strong>Wordpress</strong> themes from scratch and customize existing ones. I can comfortably work with The Loop, custom post types and custom page templates. However, I don't fiddle with more advanced functions, and I don't do plugin development.</li>
