Added 2 new Projects

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -76,6 +76,26 @@
 <section class="projects">
 	
 		<article class="project">
+			<div class="project__screenshot" style="background-image: url(/assets/images/projects/csorbapeterart-01.webp)"></div>
+			<div class="project__logo-border">
+				<img class="project__logo" src="/assets/images/projects/csorbapeterart-logo.webp" alt="Csorba Péter Art">
+			</div>
+			<h2 class="project__title">Csorba Péter Art</h2>
+			<p class="project__description">Péter is a Hungarian-American contemporary fine art painter from Transylvania.</p>
+			<a class="project__button button" href="/projects/csorbapeterart/">View Details</a>
+		</article>
+	
+		<article class="project">
+			<div class="project__screenshot" style="background-image: url(/assets/images/projects/laczadesign-01.webp)"></div>
+			<div class="project__logo-border">
+				<img class="project__logo" src="/assets/images/projects/laczadesign-logo.webp" alt="LaczaDesign">
+			</div>
+			<h2 class="project__title">LaczaDesign</h2>
+			<p class="project__description">Lacza is an amazing 2D/3D artist and graphic designer from Hungary.</p>
+			<a class="project__button button" href="/projects/laczadesign/">View Details</a>
+		</article>
+	
+		<article class="project">
 			<div class="project__screenshot" style="background-image: url(/assets/images/projects/roland-szabo-photography-01.webp)"></div>
 			<div class="project__logo-border">
 				<img class="project__logo" src="/assets/images/projects/roland-szabo-photography-logo.webp" alt="Roland Szabó Photography">
