--- a/src/projects/roland-szabo-photography.html
+++ b/src/projects/roland-szabo-photography.html
@@ -2,7 +2,7 @@
 layout: base.html
 tags: projects
 title: Roland Szabó Photography
-tagline: Passion Project
+tagline: Professional Photography in Budapest
 intro: This is the portfolio website of my portrait photography journey.
 logo_url: /assets/images/projects/roland-szabo-photography-logo.webp
 screenshot_url: /assets/images/projects/roland-szabo-photography-01.webp
@@ -24,7 +24,7 @@ screenshot_url: /assets/images/projects/roland-szabo-photography-01.webp
 </figure>
 <figure class="figure figure--even">
 	<img class="figure__image" src="/assets/images/projects/roland-szabo-photography-02.webp" alt="Screenshot of {{ title }}'s Gallery Page">
-	<figcaption class="figure__caption figure__caption--even">Recent Work</figcaption>
+	<figcaption class="figure__caption figure__caption--even">Female Portraits Portfolio Page</figcaption>
 </figure>
 <figure class="figure figure--odd">
 	<img class="figure__image" src="/assets/images/projects/roland-szabo-photography-03.webp" alt="Screenshot of {{ title }}'s About Page">
