--- a/src/projects/csorbapeterart.html
+++ b/src/projects/csorbapeterart.html
@@ -31,7 +31,7 @@ screenshot_url: /assets/images/projects/csorbapeterart-01.webp
 </figure>
 <figure class="figure figure--even">
 	<img class="figure__image" src="/assets/images/projects/csorbapeterart-04.webp" alt="Blog Post Page">
-	<figcaption class="figure__caption figure__caption--odd">Blog Post Page</figcaption>
+	<figcaption class="figure__caption figure__caption--even">Blog Post Page</figcaption>
 </figure>
 
 <section class="callout">
