--- a/public/index.html
+++ b/public/index.html
@@ -86,24 +86,27 @@
 
 	<section class="section">
 		<div class="container">
-			<h2>What You'll Get When We Work Together</h2>
+			<header class="subheading">
+				<h2 class="subheading__title">What You'll Get When We Work Together</h2>
+				<p class="subheading__text">I'm not just here to build a website; I'm here to make your life easier.</p>
+			</header>
 			<div class="benefits">
-				<div class="benefits__item">
-					<h3><i class="fa-regular fa-handshake-simple text-yellow icon-left"></i> A Seamless Process</h3>
+				<article class="benefits__item">
+					<h3 class="benefits__title"><i class="fa-regular fa-handshake-simple text-yellow icon-left"></i> A Seamless Process</h3>
 					<p class="mb-0">From content planning to launch, I handle every detail, ensuring the process is smooth and hassle-free. I'll take care of every step for you, so you can keep doing what you love, and not worry about your website.</p>
-				</div>
-				<div class="benefits__item">
-					<h3><i class="fa-regular fa-feather text-yellow icon-left"></i> Elegant Simplicity</h3>
+				</article>
+				<article class="benefits__item">
+					<h3 class="benefits__title"><i class="fa-regular fa-feather text-yellow icon-left"></i> Elegant Simplicity</h3>
 					<p class="mb-0">Your website will be designed with a focus on minimalist beauty, where every element serves a purpose. The result is a site that's intuitive, user-friendly, and puts your content front and center.</p>
-				</div>
-				<div class="benefits__item">
-					<h3><i class="fa-regular fa-mobile-retro text-yellow icon-left"></i> Mobile-First Design</h3>
+				</article>
+				<article class="benefits__item">
+					<h3 class="benefits__title"><i class="fa-regular fa-mobile-retro text-yellow icon-left"></i> Mobile-First Design</h3>
 					<p class="mb-0">Your website will be crafted with a mobile-first approach, ensuring it looks great and loads quickly on any device. Whether your audience is browsing on a phone, tablet, or desktop, they'll enjoy a top-notch experience.</p>
-				</div>
-				<div class="benefits__item">
-					<h3><i class="fa-regular fa-magnifying-glass text-yellow icon-left"></i> SEO-Friendly Code</h3>
+				</article>
+				<article class="benefits__item">
+					<h3 class="benefits__title"><i class="fa-regular fa-magnifying-glass text-yellow icon-left"></i> SEO-Friendly Code</h3>
 					<p class="mb-0">I write clean, semantic code that search engines love, giving your site a strong foundation for search engine optimization. This means better visibility and more potential traffic from people searching for what you offer.</p>
-				</div>
+				</article>
 			</div>
 		</div>
 	</section>
@@ -125,7 +128,10 @@
 
 	<section class="section">
 		<div class="container">
-			<h2>How I'll Bring Your Vision to Life</h2>
+			<header class="subheading">
+				<h2 class="subheading__title">How I'll Bring Your Vision to Life</h2>
+				<p class="subheading__text">I have a straightforward process to make your life easier.</p>
+			</header>
 			<ol class="process">
 				<li class="process__item">
 					<h3 class="process__title">Discovery</h3>
@@ -144,6 +150,8 @@
 					<p class="process__text">After launch, I'm here to help with updates, maintenance, and any questions you have, ensuring your website stays in peak condition.</p>
 				</li>
 			</ol>
+			
+			<a class="btn btn--primary mt-2" href="/contact/">Let's Work Together!</a>
 		</div>
 	</section>
 </main>
