--- a/public/services/index.html
+++ b/public/services/index.html
@@ -71,11 +71,13 @@
 	<div class="container">
 		<header class="page-header">
 			<h1 class="page-header__title">Services</h1>
-			<p class="page-header__intro">Creating a website shouldn't be a daunting task—it should be an empowering experience. That's why I focus on simplifying the entire process for you, taking care of the details so you don't have to. Whether you need a new site from scratch or improvements to your current one, I'm here to ensure everything runs smoothly, from design to launch and beyond.</p>
+			<p class="page-header__text">Creating a website shouldn't be a daunting task—it should be an empowering experience. That's why I focus on simplifying the entire process for you, taking care of the details so you don't have to. Whether you need a new site from scratch or improvements to your current one, I'm here to ensure everything runs smoothly, from design to launch and beyond.</p>
 		</header>
 
-		<h2 class="mb-1">Creating Your Brand New Website</h2>
-		<p>Don't have a website yet? Not for long, I'm here to help you!</p>
+		<header class="subheading">
+			<h2 class="subheading__title">Creating Your Brand New Website</h2>
+			<p class="subheading__text">Don't have a website yet? Not for long, I'm here to help you!</p>
+		</header>
 
 		<section class="section">
 			<div class="services">
@@ -86,35 +88,34 @@
 					</header>
 					<p><strong class="text-light">Overview:</strong> Tailored for those who want the flexibility of managing their own content, WordPress is a powerful and popular choice. With my twelve years of experience, I craft custom WordPress themes that are lightweight, fast, and easy to manage.</p>
 					<p><strong class="text-light">Ideal For:</strong> Creatives or small businesses who need a dynamic, regularly updated website with a user-friendly admin interface.</p>
-					<p><strong class="text-light">Features:</strong>
-						<ul class="checklist">
-							<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Custom-built themes for optimal performance</li>
-							<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Scalable and easy to update</li>
-							<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Secure and SEO-friendly</li>
-						</ul>
-					</p>
+					<p><strong class="text-light">Features:</strong></p>
+					<ul class="mb-0">
+						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Custom-built themes for optimal performance</li>
+						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Scalable and easy to update</li>
+						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Secure and SEO-friendly</li>
+					</ul>
 				</article>
 				<article class="service service--pink">
 					<header class="service__header">
 						<i class="service__icon fa-solid fa-code text-pink"></i>
 						<h3 class="service__title">Static HTML/CSS Website</h3>
 					</header>
-					<h3 class="service__title"></h3>
 					<p><strong class="text-light">Overview:</strong> For clients who want a feather weight, blazing fast, small site that doesn't require frequent updates, I offer custom-built static websites using HTML, CSS, and Eleventy. This approach provides superior performance and minimal maintenance.</p>
 					<p><strong class="text-light">Ideal For:</strong> Clients who need a small site for displaying information, like an online business card, that prioritizes speed and simplicity.</p>
-					<p><strong class="text-light">Features:</strong>
-						<ul class="checklist">
-							<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Blazing fast load times</li>
-							<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Low maintenance, low upkeep costs</li>
-							<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Easy to extend and update as needed</li>
-						</ul>
-					</p>
+					<p><strong class="text-light">Features:</strong></p>
+					<ul class="mb-0">
+						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Blazing fast load times</li>
+						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Low maintenance, low upkeep costs</li>
+						<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Easy to extend and update as needed</li>
+					</ul>
 				</article>
 			</div>
 		</section>
 
-		<h2 class="mb-1">Improving Your Existing Website</h2>
-		<p>Already have a website that needs tweaking? Let me make it better!</p>
+		<header class="subheading">
+			<h2 class="subheading__title mt-0">Improving Your Existing Website</h2>
+			<p class="subheading__text">Already have a website that needs tweaking? Let me make it better!</p>
+		</header>
 
 		<section class="section services">
 			<article class="service service--yellow">
@@ -122,16 +123,14 @@
 					<i class="service__icon fa-solid fa-gauge-high text-yellow"></i>
 					<h3 class="service__title">Performance Optimization</h3>
 				</header>
-				<h3 class="service__title"></h3>
 				<p><strong class="text-light">Overview:</strong> If your current website is sluggish or underperforming, I can help. I specialize in optimizing load times and ensuring your site runs smoothly. No need to alter your design or content; this service is all about speed.</p>
 				<p><strong class="text-light">Ideal For:</strong> Anyone with an existing website that needs a performance boost without a complete redesign.</p>
-				<p><strong class="text-light">Features:</strong>
-					<ul class="checklist">
-						<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Improved load times</li>
-						<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Enhanced user experience through faster navigation</li>
-						<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> SEO benefits from a quicker site</li>
-					</ul>
-				</p>
+				<p><strong class="text-light">Features:</strong></p>
+				<ul class="mb-0">
+					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Improved load times</li>
+					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Enhanced user experience through faster navigation</li>
+					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> SEO benefits from a quicker site</li>
+				</ul>
 			</article>
 			<article class="service service--yellow">
 				<header class="service__header">
@@ -140,19 +139,22 @@
 				</header>
 				<p><strong class="text-light">Overview:</strong> Beyond performance, I also offer design and user experience improvements. This could involve refining your site's layout, navigation, or overall aesthetic to better engage your audience.</p>
 				<p><strong class="text-light">Ideal For:</strong> Clients who are happy with their current content but feel their site could be more visually appealing or easier to use.</p>
-				<p><strong class="text-light">Features:</strong>
-					<ul class="checklist">
-						<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Improved navigation and user flow</li>
-						<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Modern, clean design updates</li>
-						<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Enhanced mobile responsiveness</li>
-					</ul>
-				</p>
+				<p><strong class="text-light">Features:</strong></p>
+				<ul class="mb-0">
+					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Improved navigation and user flow</li>
+					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Modern, clean design updates</li>
+					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Enhanced mobile responsiveness</li>
+				</ul>
 			</article>
 		</section>
+		
+		<a class="btn btn--primary mb-2" href="/contact/">Let's Work Together!</a>
 
 		<section class="section">
-			<h2 class="mb-1">Frequently Asked Questions</h2>
-			<p>Here's a few of your questions already answered.</p>
+			<header class="subheading">
+				<h2 class="subheading__title">Frequently Asked Questions</h2>
+				<p class="subheading__text">Here's a few of your questions already answered.</p>
+			</header>
 			<details class="faq">
 				<summary class="faq__question">How long does it take to build a website?</summary>
 				<div class="faq__answer">
