--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
 		<div class="container">
 			<header class="subheading">
 				<h2 class="subheading__title">How I'll Bring Your Vision to Life</h2>
-				<p class="subheading__text">I have a straightforward process to make your life easier.</p>
+				<p class="subheading__text">My web design process is straightforward and as most hassle-free as possible.</p>
 			</header>
 			<ol class="process">
 				<li class="process__item">
@@ -150,11 +150,12 @@
 					<p class="process__text">After launch, I'm here to help with updates, maintenance, and any questions you have, ensuring your website stays in peak condition.</p>
 				</li>
 			</ol>
-			
+
 			<a class="btn btn--primary mt-2" href="/contact/">Let's Work Together!</a>
 		</div>
 	</section>
 </main>
+
 		<footer class="footer">
 	<div class="container footer__container">
 		<small>&copy; 2024 Roland Szabó Design</small>
