--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -10,8 +10,8 @@ css: about
 		<header class="page-header">
 			<h1 class="page-header__title">About</h1>
 		</header>
-		<div class="home-photo">
-			<img class="home-photo__image" src="/assets/images/roland.webp" alt="Roland Szabó" title="Hi, I'm Roland!">
+		<div class="about-photo">
+			<img class="about-photo__image" src="/assets/images/roland.webp" alt="Roland Szabó" title="Hi, I'm Roland!">
 		</div>
 		<p class="h3 mt-0">I believe that creating a website should be a simple, stress-free, and <span class="text-pink">fun</span> process.</p>
 		<p>I'm Roland, web and UI/UX designer for the last 15 years, and I focus on making the entire process as easy as possible for you. From design to launch, my goal is to eliminate the complexity, so you can focus on what matters most—growing your business or creative work.</p>
