--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -51,16 +51,28 @@ css: home
 
 	<section class="section">
 		<div class="container">
-			<blockquote class="testimonial">
-				<header class="testimonial__header">
-					<img class="testimonial__image" src="/assets/images/testimonial-pete.webp" alt="Pete Zaborszky">
-					<div class="testimonial__author">
-						<cite class="testimonial__name">Peter Zaborszky</cite>
-						<span class="testimonial__job">co-founder</span> &ndash; <a class="testimonial__link" href="https://proprivacy.com/" target="_blank" rel="noreferrer noopener">ProPrivacy</a>
-					</div>
-				</header>
-				<p class="testimonial__text">Roland has worked for me full time for 7 years, and that is a testament to his skills. He is both an excellent designer for apps and web projects, but can also code them as a frontend developer. He has a great work ethic. He is very honest and is open to debate about designs, which makes working with him very productive. I highly recommend working with him.</p>
-			</blockquote>
+			<div class="testimonials">
+				<blockquote class="testimonial">
+					<header class="testimonial__header">
+						<img class="testimonial__image" src="/assets/images/testimonial-pete.webp" alt="Pete Zaborszky">
+						<div class="testimonial__author">
+							<cite class="testimonial__name">Peter Zaborszky</cite>
+							<span class="testimonial__job">co-founder</span> &ndash; <a class="testimonial__link" href="https://proprivacy.com/" target="_blank" rel="noreferrer noopener">ProPrivacy</a>
+						</div>
+					</header>
+					<p class="testimonial__text">Roland has worked for me full time for 7 years, and that is a testament to his skills. He is both an excellent designer for apps and web projects, but can also code them as a frontend developer. He has a great work ethic. He is very honest and is open to debate about designs, which makes working with him very productive. I highly recommend working with him.</p>
+				</blockquote>
+				<blockquote class="testimonial">
+					<header class="testimonial__header">
+						<img class="testimonial__image" src="/assets/images/testimonial-lacza.webp" alt="László Magyar">
+						<div class="testimonial__author">
+							<cite class="testimonial__name">László Magyar</cite>
+							<span class="testimonial__job">digital artist</span> &ndash; <a class="testimonial__link" href="https://laczadesign.com/" target="_blank" rel="noreferrer noopener">LaczaDesign</a>
+						</div>
+					</header>
+					<p class="testimonial__text">Roland is a very helpful professional who is always on hand if there is a problem with the site or if it needs to be fixed/updated. From the very beginning he worked to make sure that all my ideas were valid and workable under all circumstances. I 100% recommend him for any type of site and I guarantee he will not disappoint.</p>
+				</blockquote>
+			</div>
 		</div>
 	</section>
 
